@@ -64,6 +64,8 @@ sunuo (0.3.2) unstable; urgency=low
     - removed from Notoriety: CheckAggressor(), CheckAggressed()
     - [docgen is disabled by default
     - make IUsesRemaining public
+    - removed scripts:
+      - Misc/AccountPrompt.cs
   * extended API for optimization
     - Mobile: added AggressorsOrNull, FindAggressorByAttacker(),
       FindAggressorByDefender(), AggressedOrNull, FindAggressedByAttacker(),
